k8s/minikube-demo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-app
  labels:
    app: docker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-app
  template:
    metadata:
      labels:
        app: docker-app
    spec:
      restartPolicy: Always
      containers:
        - name: docker-app
          image: tsvz2011/docker-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: web
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
