k8s/minikube-demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-app
  labels:
    app: docker-app
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      name: web
  selector:
    app: docker-app
