k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginxservice-a
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: docker-app
                port:
                  number: 8000
